[package]
name = "priority-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
solana-client = "1.17.6"
solana-sdk = "1.17.6"
solana-transaction-status = "1.17.6"
